# gh_events_wheel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/app/: config.py  main.py
src/app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/app/templates/: bronze_parsing_task.py  daily_ingestion_task.py
src/app/templates/bootstrap/: configuration_tables_creation.py  silver_tables_creation.py
src/app/templates/gold_layer/: gold_daily_user_rating.py  gold_pr_cycle.py  gold_repo_popularity.py
src/app/templates/silver_layer/: create_event.py  delete_event.py  issue_comment_event.py  issues_event.py  member_event.py  pull_request_event.py  pull_request_rev_event.py  push_event.py  release_event.py  watch_event.py
terraform/: config.auto.tfvars  main.tf  terraform.tfstate  terraform.tfstate.backup
terrafrom/: .terraform.lock.hcl  terraform.tfstate  terraform.tfstate.backup
